Startet implementering af adapter (herunder widgets i layout og tilføjelser i gradle)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WeekendWatchlist</string>
+    <string name ="IntentAdapterDetails">IntentAdapterDetails</string>
 </resources>
