Gået i gang med design af DetailsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">WeekendWatchlist</string>
     <string name ="IntentAdapterDetails">IntentAdapterDetails</string>
+    <string name ="DefaultText">TEXT TO BE FILLED</string>
 </resources>
