--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="genre_text">Genre</string>
     <string name="director_text">Director</string>
     <string name="writer_text">Writer</string>
+    <string name="delete_question">Do you want to delete this movie from the list?</string>
+    <string name="delete_yes">Yes, delete</string>
 
 
 </resources>
