Leget videre med looket på detailsacitity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
         <item>War</item>
         <item>Western</item>
     </string-array>
+    <string name="actors_text">Actors</string>
+    <string name="awards_text">Awards</string>
 
 
 </resources>
