Tilføjet så man ikke overskriver sin film, hvis man forsøger at tilføje den igen samt user feedback i form af flere toasts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,10 @@
     <string name="personal_rating_text">Personal Rating</string>
     <string name="update_text">UPDATE</string>
     <string name="personal_notes_hint">write your own notes, comments, review here</string>
+    <string name="movie_already_in_list">The movie is already in your watchlist</string>
+    <string name="movie_shared">Movie has been shared!</string>
+    <string name="movie_added">Movie has been added to your list!</string>
+    <string name="api_fail">This movie title does not exist. Check your spelling and  try again</string>
 
 
 </resources>
